testsuite/tests/typecheck/should_fail/tcfail014.stderr

tcfail014.hs:5:33: error:
    • Couldn't match expected type ‘t4’ with actual type ‘t4 -> t5’
    • In the first argument of ‘z’, namely ‘z’
      In the expression: z z
      In an equation for ‘h’: h z = z z
    • Relevant bindings include
        z :: t4 -> t5 (bound at tcfail014.hs:5:27)
        h :: (t4 -> t5) -> t5 (bound at tcfail014.hs:5:25)
